[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Images/Composition/ProfileImages/lupa_profile.png" type="Texture" id=1]
[ext_resource path="res://soundtrack/Loop4 Lavadeiras.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/Introductions/Multidao.gd" type="Script" id=3]
[ext_resource path="res://scenes/AuxScenes/ChatBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Cena/Lavadeiras/After02.png" type="Texture" id=5]
[ext_resource path="res://assets/Cena/Lavadeiras/After01.png" type="Texture" id=6]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.862745, 0.858824, 0.858824, 1 )

[sub_resource type="Animation" id=2]
resource_name = "Transition"
length = 2.6
tracks/0/type = "value"
tracks/0/path = NodePath("Between:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.2, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.862745, 0.858824, 0.858824, 0.958333 ), Color( 0.862745, 0.858824, 0.858824, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image01:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image02:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 0.482968 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "ChatPop"
tracks/0/type = "value"
tracks/0/path = NodePath("ChatBox:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="Multidao" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -538.0
margin_top = -311.0
margin_right = 538.0
margin_bottom = 311.0
custom_styles/panel = SubResource( 1 )

[node name="Image02" type="Sprite" parent="."]
visible = false
position = Vector2( 525, 280 )
scale = Vector2( 0.418406, 0.418406 )
texture = ExtResource( 5 )

[node name="Between" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -553.0
margin_top = -367.0
margin_right = 548.0
margin_bottom = 333.0
color = Color( 0.862745, 0.858824, 0.858824, 1 )

[node name="Image01" type="Sprite" parent="."]
position = Vector2( 508, 292 )
scale = Vector2( 0.380505, 0.380505 )
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="Transition" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Transition = SubResource( 2 )

[node name="MainMusic" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 2 )

[node name="ChatBox" parent="." instance=ExtResource( 4 )]
margin_top = 160.0
margin_bottom = 208.0
rect_scale = Vector2( 1e-05, 1e-05 )
chat_res = "res://dialogs/lavadeira.txt"
img = [ ExtResource( 1 ) ]
cha = [ "narra" ]
has_profile = false

[node name="ChatPop" type="AnimationPlayer" parent="."]
anims/ChatPop = SubResource( 3 )

[node name="Timer1" type="Timer" parent="."]

[connection signal="animation_finished" from="Transition" to="." method="_on_Transition_animation_finished"]
[connection signal="close_chat" from="ChatBox" to="." method="_on_ChatBox_close_chat"]
[connection signal="end_dialog" from="ChatBox" to="." method="multidao_end_scene"]
[connection signal="new_dialog" from="ChatBox" to="." method="new_dialog_text"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
